# exogress-c

./: .gitignore  Cargo.toml  Cross.toml  build.rs
.github/workflows/: build-and-publish-binaries.yml  checks.yml
example-c/: main.c  run.sh
src/: lib.rs
