[package]
name = "exogress-c"
version = "0.0.1-alpha.1"
edition = "2018"
authors = ["Exogress Team <team@exogress.com>"]

[dependencies]
exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.2.0", features = ["client-core", "tunnel", "config-core", "entities", "common-utils"], default-features = false }
shadow-clone = "1.2.1"
futures = "0.3.5"
trust-dns-resolver = "0.20.0"
hashbrown = "0.11.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt", "parking_lot"] }
anyhow = "1.0.41"
log = "0.4.14"
parking_lot = "0.11.1"
lazy_static = "1.4.0"

[lib]
name = "exogress"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.19.0"
